src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__list__invalid_params_with_null_bytes-2.snap
---
source: src/tests/routes/crates/list.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "Failed to deserialize query string: category: string contains null byte"
    }
  ]
}
