src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__list__invalid_params_with_null_bytes-3.snap
---
source: src/tests/routes/crates/list.rs
expression: response.json()
snapshot_kind: text
---
{
  "errors": [
    {
      "detail": "parameter all_keywords cannot contain a null byte"
    }
  ]
}
