src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__list__invalid_params_with_null_bytes-5.snap
---
source: src/tests/routes/crates/list.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "parameter letter cannot contain a null byte"
    }
  ]
}
